--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cwsw_eventqueue"]
 	path = cwsw_eventqueue
 	url = git@github.com:kbecker0619/cwsw_eventqueue.git
+[submodule "test/libs/cwsw_lib"]
+	path = test/libs/cwsw_lib
+	url = git@github.com:kbecker0619/cwsw_lib.git
