WIP save, bring up of old SME
This SME is incredibly complex. I have no desire nor energy to push it forward. Let's see what I can do with a simpler design

--- a/test/ecproject/Debug/makefile
+++ b/test/ecproject/Debug/makefile
@@ -8,12 +8,14 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include libs/tedlos/subdir.mk
 -include libs/cwsw_lib/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_evqueue_ex/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_evqueue/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_event/src/subdir.mk
--include component/cwsw_swtimer/src/subdir.mk
--include component/cwsw_clock/src/subdir.mk
+-include libs/cwsw_clock_services/cwsw_swtimer/src/subdir.mk
+-include libs/cwsw_clock_services/cwsw_clock/src/subdir.mk
+-include component/cwsw_sme/src/subdir.mk
 -include app/cwsw_lib_prj/subdir.mk
 -include app/subdir.mk
 -include subdir.mk
