WIP commit. does not build. NOW RELIES ON GTK FOR "NONE" BOARD.
* incident that provokes this commit is the addition of the cwsw_board component. this was provoked by the following:
* addition of GTK libs for UI and timers. Note this relies on MSYS2, which I chose to implement by installing git-sdk-64.
* renamed existing alarm timers to conform with my new desired naming pattern
* added a read-button task. the current state is mixed, some of my early experimentation, plus a prototype of a GTK method. this desperately needs to be cleaned up.
* added a UI panel to represent a dev kit w/ 8 buttons and 8 indicators.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "test/libs/cwsw_eventqueue"]
 	path = test/libs/cwsw_eventqueue
 	url = git@github.com:kbecker0619/cwsw_eventqueue.git
+[submodule "test/libs/cwsw_board"]
+	path = test/libs/cwsw_board
+	url = git@github.com:kbecker0619/cwsw_board.git
