--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "test/libs/cwsw_board"]
 	path = test/libs/cwsw_board
 	url = git@github.com:kbecker0619/cwsw_board.git
+[submodule "test/libs/cwsw_arch"]
+	path = test/libs/cwsw_arch
+	url = git@github.com:kbecker0619/cwsw_arch.git
