--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -28,6 +28,14 @@
 								<option id="gnu.cpp.compiler.mingw.exe.debug.option.optimization.level.171840968" name="Optimization Level" superClass="gnu.cpp.compiler.mingw.exe.debug.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level.446287234" name="Debug Level" superClass="gnu.cpp.compiler.mingw.exe.debug.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/bd_gtk&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/cairo"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\gdk-pixbuf-2.0&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\atk-1.0&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_lib/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app/cfg&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_event/inc&quot;"/>
@@ -37,7 +45,6 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/cwsw_sme/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/board/bd_gtk&quot;"/>
 									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.preprocessor.def.1797760866" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
@@ -63,11 +70,17 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue_ex/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_clock_services/cwsw_clock/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/none&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/board/bd_gtk&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/bd_gtk&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/cwsw_sme/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app&quot;"/>
 									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/cairo"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\gdk-pixbuf-2.0&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\atk-1.0&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.preprocessor.def.symbols.841831710" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="&quot;XPRJ_Win_MinGW_${ConfigName}=1&quot;"/>
@@ -78,7 +91,7 @@
 								<option id="gnu.c.compiler.option.warnings.extrawarn.870134185" name="Extra warnings (-Wextra)" superClass="gnu.c.compiler.option.warnings.extrawarn" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="gnu.c.compiler.option.warnings.pedantic.1700937783" name="Pedantic (-pedantic)" superClass="gnu.c.compiler.option.warnings.pedantic" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="gnu.c.compiler.option.dialect.std.411962644" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.c11" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.misc.other.1571946036" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 `pkg-config --cflags gtk+-3.0`" valueType="string"/>
+								<option id="gnu.c.compiler.option.misc.other.1571946036" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 " valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.778994246" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1268148108" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug"/>
@@ -116,7 +129,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="libs/cwsw_eventqueue/test|component/cwsw_event/test|libs/cwsw_arch/test|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|src|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|libs/cwsw_swtimer|bsw/svc/cwsw_evq/test|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|libs/cwsw_board_old|component/test" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="libs/cwsw_board/none|libs/cwsw_eventqueue/test|component/cwsw_event/test|libs/cwsw_arch/test|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|src|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|libs/cwsw_swtimer|bsw/svc/cwsw_evq/test|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|libs/cwsw_board_old|component/test" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -154,10 +167,17 @@
 						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_evqueue_ex/inc"/>
 						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_clock/inc"/>
 						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_clock_services/cwsw_swtimer/inc"/>
+						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_board/bd_gtk"/>
+						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_arch/inc/i386"/>
 						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../component/cwsw_sme/inc"/>
 						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../app"/>
-						<entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../component/board/bd_gtk"/>
 						<entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
+						<entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
+						<entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include"/>
+						<entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
+						<entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/cairo"/>
+						<entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\include\gdk-pixbuf-2.0"/>
+						<entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\include\atk-1.0"/>
 					</externalSetting>
 				</externalSettings>
 			</storageModule>
@@ -241,6 +261,9 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/board/bd_gtk&quot;"/>
 									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/none&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.preprocessor.def.symbols.1305110222" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="&quot;XPRJ_Win_MinGW_${ConfigName}=1&quot;"/>
