--- a/test/ecproject/Debug/makefile
+++ b/test/ecproject/Debug/makefile
@@ -14,6 +14,7 @@ RM := rm -rf
 -include libs/cwsw_eventqueue/cwsw_event/src/subdir.mk
 -include libs/cwsw_clock_services/cwsw_swtimer/src/subdir.mk
 -include libs/cwsw_clock_services/cwsw_clock/src/subdir.mk
+-include libs/cwsw_board/common/src/subdir.mk
 -include libs/cwsw_board/bd_gtk/src/subdir.mk
 -include libs/cwsw_arch/src/i386/subdir.mk
 -include libs/cwsw_arch/inc/i386/peripheral/ports/subdir.mk
