#24 Add LW/CVI support. #25 Simplify support for multiple tool chains.
* Add `WALK` indicator
* Add 1-ms timer, connected to callback in the same way as was done for the GTK board
* Began connecting code to LED outputs.
* Basic timing functions work, button callbacks register.
* LW/CVI functionality roughly equiv. to GTK's
* Renamed the LW/CVI controls to match those of GTK's

--- a/test/app/.gitignore
+++ b/test/app/.gitignore
@@ -1,2 +1,5 @@
 *#
 
+# Ignore header file written from LabWindows/CFI's UI editor. 
+#	Instead, copy this to file `cwsw_board_ui.h` in the Board / CVI component.
+board.h
