--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -61,21 +61,25 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/common&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/gtk-3.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/glib-2.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/lib/glib-2.0/include&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/pango-1.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/cairo&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/gdk-pixbuf-2.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/atk-1.0&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/bd_gtk&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/cairo"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\gdk-pixbuf-2.0&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;D:\_Programs\git-sdk-64\mingw64\include\atk-1.0&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_lib/inc&quot;"/>
                                     									
@@ -94,8 +98,6 @@
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/cwsw_sme/inc&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
                                     								
                                 </option>
                                 								
@@ -343,25 +345,27 @@
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_board/bd_gtk"/>
                         						
+                        <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_board/common"/>
+                        						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../libs/cwsw_arch/inc/i386"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../../component/cwsw_sme/inc"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${ProjDirPath}/../app"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/gtk-3.0"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gtk-3.0"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/glib-2.0"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\lib\glib-2.0\include"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/lib/glib-2.0/include"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/pango-1.0"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/pango-1.0"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:/_Programs/git-sdk-64/mingw64/include/cairo"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/cairo"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\include\gdk-pixbuf-2.0"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gdk-pixbuf-2.0"/>
                         						
-                        <entry flags="NONE" kind="includePath" name="D:\_Programs\git-sdk-64\mingw64\include\atk-1.0"/>
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/atk-1.0"/>
                         					
                     </externalSetting>
                     				
