--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -41,11 +41,7 @@
                             							
                             <tool id="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.955745680" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug">
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.697203087" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-                                    									
-                                    <listOptionValue builtIn="false" value="D:/_Programs/git-sdk-64/mingw64/include/glib-2.0"/>
-                                    								
-                                </option>
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.both.asm.option.include.paths.697203087" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.1072749620" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
                                 							
@@ -83,7 +79,7 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_lib/inc&quot;"/>
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app/cfg&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app/cfg&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_event/inc&quot;"/>
                                     									
@@ -97,7 +93,7 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/cwsw_sme/inc&quot;"/>
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app&quot;"/>
                                     								
                                 </option>
                                 								
@@ -133,9 +129,7 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.2128645034" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_lib/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app/cfg&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_eventqueue/cwsw_event/inc&quot;"/>
                                     									
@@ -151,11 +145,9 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_board/common&quot;"/>
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_arch/inc/i386&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../libs/cwsw_lib/inc&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../component/cwsw_sme/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../app&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/gtk-3.0&quot;"/>
                                     									
@@ -170,6 +162,10 @@
                                     <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/gdk-pixbuf-2.0&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/atk-1.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../app/cfg&quot;"/>
                                     								
                                 </option>
                                 								
