--- a/test/ecproject/Debug/makefile
+++ b/test/ecproject/Debug/makefile
@@ -18,7 +18,7 @@ RM := rm -rf
 -include libs/cwsw_board/bd_gtk/src/subdir.mk
 -include libs/cwsw_arch/src/i386/subdir.mk
 -include libs/cwsw_arch/inc/i386/peripheral/ports/subdir.mk
--include component/cwsw_sme/src/subdir.mk
+-include cwsw_sme/src/subdir.mk
 -include app/cwsw_lib_prj/subdir.mk
 -include app/subdir.mk
 -include subdir.mk
