--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -36,6 +36,11 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/component</locationURI>
 		</link>
 		<link>
+			<name>cwsw_sme</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_sme</locationURI>
+		</link>
+		<link>
 			<name>doc</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/doc</locationURI>
