--- a/test/vsproject/cwsw_evqueue_test.vcxproj
+++ b/test/vsproject/cwsw_evqueue_test.vcxproj
@@ -54,7 +54,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\libs\cwsw_lib\inc;..\..\app\cfg;..\..\app\cfg\vs2010;..\libs\cwsw_eventqueue\cwsw_event\inc;..\libs\cwsw_eventqueue\cwsw_evqueue\inc;..\libs\cwsw_eventqueue\cwsw_evqueue_ex\inc;..\libs\cwsw_evqueue_test\cwsw_clock\inc;..\libs\cwsw_evqueue_test\cwsw_swtimer\inc;..\libs\cwsw_clock_services\cwsw_clock\inc;..\libs\cwsw_clock_services\cwsw_swtimer\inc;..\libs\cwsw_arch\inc\i386;..\libs\cwsw_board\none\;..\libs\cwsw_board\common\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\libs\cwsw_lib\inc;..\..\app\cfg;..\..\app\cfg\vs2010;..\libs\cwsw_eventqueue\cwsw_event\inc;..\libs\cwsw_eventqueue\cwsw_evqueue\inc;..\libs\cwsw_eventqueue\cwsw_evqueue_ex\inc;..\libs\cwsw_evqueue_test\cwsw_clock\inc;..\libs\cwsw_evqueue_test\cwsw_swtimer\inc;..\libs\cwsw_clock_services\cwsw_clock\inc;..\libs\cwsw_clock_services\cwsw_swtimer\inc;..\libs\cwsw_arch\inc\i386;..\libs\cwsw_board\none\;..\libs\cwsw_board\common\;..\..\cwsw_sme\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
       <ExceptionHandling>false</ExceptionHandling>
       <DisableSpecificWarnings>4127</DisableSpecificWarnings>
@@ -96,6 +96,7 @@
     <None Include="..\libs\cwsw_lib\inc\README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\cwsw_sme\src\cwsw_sme.c" />
     <ClCompile Include="..\libs\cwsw_board\common\src\cwsw_buttons.c" />
     <ClCompile Include="..\libs\cwsw_clock_services\cwsw_clock\src\cwsw_clock_svc.c" />
     <ClCompile Include="..\libs\cwsw_clock_services\cwsw_swtimer\src\cwsw_swtimer.c" />
@@ -122,6 +123,7 @@
     <ClInclude Include="..\..\app\stoplite.h" />
     <ClInclude Include="..\..\app\tedlos.h" />
     <ClInclude Include="..\..\app\tedlos_scheduler.h" />
+    <ClInclude Include="..\..\cwsw_sme\inc\cwsw_sme.h" />
     <ClInclude Include="..\libs\cwsw_arch\inc\cwsw_arch_common.h" />
     <ClInclude Include="..\libs\cwsw_arch\inc\i386\cwsw_arch.h" />
     <ClInclude Include="..\libs\cwsw_arch\inc\i386\peripheral\ports\ports_api.h" />
