Demo App #38 Stoplite Demo App: Refactor: Move LIB Package
* `git mv` LIB folder to workspace root. after this, had to manually patch
  `.gitmodules` (`path` was correct, but submodule ID was bad).

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "test/libs/cwsw_lib"]
-	path = test/libs/cwsw_lib
+[submodule "cwsw_lib"]
+	path = cwsw_lib
 	url = git@github.com:kbecker0619/cwsw_lib.git
-[submodule "component"]
-	path = test/libs/cwsw_clock_services
-	url = git@github.com:kbecker0619/cwsw_clock_services.git
 [submodule "test/libs/cwsw_eventqueue"]
 	path = test/libs/cwsw_eventqueue
 	url = git@github.com:kbecker0619/cwsw_eventqueue.git
