Demo App Issue #40 Stoplite Demo App: Refactor: Move Arch Package
**LOTS OF DAMAGE**, don't know how in the heck this happened.
* removed empty folder `cwsw_clock_services`
* reinstated `cwsw_clock_services` as submodule
* repaired doxy project for `cwsw_lib` component
* repair Eclipse project
* proposed repair for LW/CVI project, for `cwsw_clock_services` component. To be confirmed when i get back on my main system
* proposed repair for VS2010 project for `cwsw_clock_services` component. To be finally confirmed when i return to the issue for restoring the VS2010 project

--- a/test/ecproject/Debug/makefile
+++ b/test/ecproject/Debug/makefile
@@ -8,7 +8,6 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include libs/cwsw_lib/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_evqueue_ex/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_evqueue/src/subdir.mk
 -include libs/cwsw_eventqueue/cwsw_event/src/subdir.mk
@@ -16,9 +15,10 @@ RM := rm -rf
 -include libs/cwsw_clock_services/cwsw_clock/src/subdir.mk
 -include libs/cwsw_board/common/src/subdir.mk
 -include libs/cwsw_board/bd_gtk/src/subdir.mk
--include libs/cwsw_arch/src/i386/subdir.mk
--include libs/cwsw_arch/inc/i386/peripheral/ports/subdir.mk
 -include cwsw_sme/src/subdir.mk
+-include cwsw_lib/src/subdir.mk
+-include cwsw_arch/src/i386/subdir.mk
+-include cwsw_arch/inc/i386/peripheral/ports/subdir.mk
 -include app/cwsw_lib_prj/subdir.mk
 -include app/subdir.mk
 -include subdir.mk
