--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "test/libs/cwsw_board"]
 	path = test/libs/cwsw_board
 	url = git@github.com:kbecker0619/cwsw_board.git
-[submodule "test/libs/cwsw_arch"]
-	path = test/libs/cwsw_arch
+[submodule "cwsw_arch"]
+	path = cwsw_arch
 	url = git@github.com:kbecker0619/cwsw_arch.git
+[submodule "test/libs/cwsw_clock_services"]
+	path = test/libs/cwsw_clock_services
+	url = git@github.com:kbecker0619/cwsw_clock_services.git
