--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -36,6 +36,16 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/component</locationURI>
 		</link>
 		<link>
+			<name>cwsw_arch</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_arch</locationURI>
+		</link>
+		<link>
+			<name>cwsw_lib</name>
+			<type>2</type>
+			<location>D:/_Projects/cwsw_evqueue_test/cwsw_lib</location>
+		</link>
+		<link>
 			<name>cwsw_sme</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_sme</locationURI>
