Demo App Issue #40 Stoplite Demo App: Refactor: Move Arch Package
* Move project back to main computer, w/ GTK & LW/CVI installed
* Confirm correctness of GTK and LW/CVI applications
* Tweak VS2010 project, still unbuildable
* Confirm clean build & OK output of Doxy project.

--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -43,7 +43,7 @@
 		<link>
 			<name>cwsw_lib</name>
 			<type>2</type>
-			<location>D:/_Projects/cwsw_evqueue_test/cwsw_lib</location>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_lib</locationURI>
 		</link>
 		<link>
 			<name>cwsw_sme</name>
