--- a/test/vsproject/cwsw_evqueue_test.vcxproj
+++ b/test/vsproject/cwsw_evqueue_test.vcxproj
@@ -96,8 +96,10 @@
     <None Include="..\..\cwsw_lib\inc\README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\cwsw_arch\src\i386\cwsw_arch.c" />
     <ClCompile Include="..\..\cwsw_sme\src\cwsw_sme.c" />
     <ClCompile Include="..\libs\cwsw_board\common\src\cwsw_buttons.c" />
+    <ClCompile Include="..\libs\cwsw_board\none\src\cwsw_board.c" />
     <ClCompile Include="..\libs\cwsw_clock_services\cwsw_clock\src\cwsw_clock_svc.c" />
     <ClCompile Include="..\libs\cwsw_clock_services\cwsw_swtimer\src\cwsw_swtimer.c" />
     <ClCompile Include="..\libs\cwsw_eventqueue\cwsw_event\src\cwsw_event.c" />
