Demo App #42 Stoplite Demo App: Refactor: Move Board Package
* `git mv` Board folder to workspace root. after this, had to manually patch `.gitmodules`
* Fix Eclipse project
* Fix LW/CVI project
* Update VS2010. Not buildable
* Fix Doxy project

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 [submodule "test/libs/cwsw_eventqueue"]
 	path = test/libs/cwsw_eventqueue
 	url = git@github.com:kbecker0619/cwsw_eventqueue.git
-[submodule "test/libs/cwsw_board"]
-	path = test/libs/cwsw_board
+[submodule "cwsw_board"]
+	path = cwsw_board
 	url = git@github.com:kbecker0619/cwsw_board.git
 [submodule "cwsw_arch"]
 	path = cwsw_arch
